--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -1,12 +1,13 @@
 .navbar__section {
     width: 100%;
     height: 10%;
-    position: relative;
+    position: fixed;
     top: 0;
     left: 0;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    flex-wrap: wrap;
     background-color: rgb(255, 255, 255);
 }
 
