--- a/src/scss/helpers.scss
+++ b/src/scss/helpers.scss
@@ -69,7 +69,7 @@ $basesize: 16px;
   
 }
 
-@mixin absolutePosition($firstProperty: $firstValue, $secondProperty: $secondValue) {
+@mixin absolutePosition($firstProperty, $firstValue, $secondProperty, $secondValue) {
   position: absolute;
   $firstProperty: $firstValue;
   $secondProperty: $secondValue;
@@ -79,3 +79,4 @@ $basesize: 16px;
       transform: translateX($xPerc);
       transform: translateY($yPerc);
 }
+
