--- a/src/components/locationsCards/locationscards.module.scss
+++ b/src/components/locationsCards/locationscards.module.scss
@@ -1,41 +1,38 @@
 .location__card {
     position: relative;
-    width: 100px;
-    height: 160px;
     box-shadow: $minelevation;
+    width: 300px;
+    height: 600px;
+    margin-top: 100px;
+    background-color: violet;
+    @include radius(12px, 12px, 12px, 12px);
     @include xs {
-        @include flexDirection(column, space-between, center);
-        width: 100%;
-        height: 300px;
-        padding: 100px;
+        @include flexDirection(column, space-between, center);   
+        width: 80%; 
       }
     
       @include sm {
         @include flexDirection(column, center, center);
-        width: 100vw;
-        min-height: 100vh;
-        padding: 100px;
+        width: 80%;
+   
       }
     
       @include md {
-        @include flexDirection(column, center, center);
-        width: 100vw;
-        min-height: 100vh;
-        padding: 100px;
+        @include flexDirection(row, center, center);
+        width: 40%;
+       
       }
     
       @include lg {
-        @include flexDirection(column, center, center);
-        width: 80vw;
-        min-height: 100vh;
-        padding: 100px;
+        @include flexDirection(row, center, center);
+        width: 20%;
+     
       }
     
       @include xl {
-        @include flexDirection(column, center, center);
-        width: 80vw;
-        min-height: 100vh;
-        padding: 100px;
+        @include flexDirection(row, space-between, space-between);
+        width: 20%;
+        
       }
     &:hover {
         box-shadow: $maxelevation;
@@ -45,10 +42,11 @@
         z-index: 2;
     }
     img {
-        margin: 20%;
+        width: 100%;
+        height: 100%;
         object-fit: cover;
         @include absolutePosition(top, 0, left, 0);
-        @include centerAbsolute(-50%, -50%);
+        @include centerAbsolute(50%, 0%);
         @include radius(12px, 12px, 12px, 12px)
 
     }
