--- a/src/layouts/defaultLayout/defaultLayout.module.scss
+++ b/src/layouts/defaultLayout/defaultLayout.module.scss
@@ -9,6 +9,7 @@
     justify-content: space-between;
     flex-wrap: wrap;
     background-color: rgb(255, 255, 255);
+    z-index: 4;
 }
 
 .navbar__list {
