--- a/src/components/hero/hero.module.scss
+++ b/src/components/hero/hero.module.scss
@@ -2,7 +2,7 @@
     @include xs {
     width: 100%;
     height: 90vh;
-    background-color: chocolate;
+    background-color: rgb(255, 255, 255);
   }
 
   @include sm {
